feat: added tests